# Backtester-lab

./: .env  BILLING_SETUP.md  CLOUD_RUN_READY.md  DEPLOYMENT.md  Dockerfile  ERROR_FIXES.md  README.md  SUCCESS.md  cloud-run-url.txt  deploy.sh  optimization_results.csv  package-lock.json  package.json  server.js  setup-gcloud.sh
TradingDashboard/: .env  App.tsx  CLEANUP_SUMMARY.md  Dockerfile  README.md  app.json  package-lock.json  package.json  server.js
TradingDashboard/components/: Dashboard.tsx  MetricsChart.tsx  OptimizationCard.tsx  ParameterControls.tsx  TerminalOutput.tsx  TradeLog.tsx
TradingDashboard/config/: cloudRun.ts
TradingDashboard/services/: optimizationService.ts
TradingDashboard/types/: trading.ts
quantlab-cpp/: .env.template  .gitignore  CMakeLists.txt  DOCKER_CLEANUP.md  README.md
quantlab-cpp/apps/: CMakeLists.txt  institutional_backtest.cpp  institutional_backtest.cpp.bak  strategy_optimizer.cpp
quantlab-cpp/src/: CMakeLists.txt
quantlab-cpp/src/backtest/: backtest_engine.cpp  backtest_engine.hpp
quantlab-cpp/src/core/: data_types.hpp
quantlab-cpp/src/data/: alpaca_client.cpp  alpaca_client.hpp
quantlab-cpp/src/indicators/: bollinger_bands.hpp  rolling_ema.hpp  rsi.hpp
quantlab-cpp/src/io/: http_client.hpp
quantlab-cpp/src/strategy/: mean_reversion_strategy.hpp
